2018-02-08 Release 1.1.0: Added prev/next record buttons to EditDocumentController
2018-01-31 Release 1.0.0: Added anchor links for tables in web_list module