@@ -1,0 +1,9 @@
+Record List UX Improvements
+=
+
+This extension provides a number of UX improvements to the record list and TYPO3 BE in general.
+
+Currently the following features are available:
+
+* Anchor links in web_list view (record list) which allow to jump directly to the respective table
+* Prev/next record buttons in record editing view (EditDocumentController) which allow to open the previous or next record of the same kind on the current page
