@@ -19,7 +19,7 @@ $EM_CONF[$_EXTKEY] = array(
     'clearCacheOnLoad' => 0,
     'lockType' => '',
     'author_company' => 'feinberg.it',
-    'version' => '1.1.0',
+    'version' => '1.1.1',
     'constraints' => array(
         'depends' => array(
             'typo3' => '8.7.0-8.7.99',
